# oracle-canister

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build_oracle_canister.yml
solidity/src/: AggregatorSingle.sol
solidity/test/: AggregatorSingle.t.sol
src/oracle_canister/: Cargo.toml
src/oracle_canister/src/: canister.rs  evm_canister.rs
src/oracle_canister/src/evm_canister/: account.rs  contract.rs
src/oracle_canister/src/state/: pair_price.rs
src/solidity-helper/: Cargo.toml
