[package]
name = "oracle_canister"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
export-api = []

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
candid = { workspace = true }
chrono = { workspace = true }
ethers-core = { workspace = true }
evmc-did = { workspace = true }
hex = { workspace = true }
ic-canister = { workspace = true }
ic-exports = { workspace = true }
ic-stable-structures = { workspace = true }
mockall = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[build-dependencies]
solidity-helper = { path = "../solidity-helper" }
